# homepage

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
app/: main.py
docs/: ADMIN_USER_ENFORCEMENT_PLAN.md  AGENTS.md  AUDIT_AND_SEO_PLAN.md  CLOUDFLARE_OAUTH_APPROVAL_ROADMAP.md  CODEMAP.md  DESIGN_SYSTEM_COMPLIANCE_AUDIT.md  IMPLEMENTATION_LEARNING_LOG.md  STITCH_PROMPT_PACK.md  TECH_STACK.md  UV_WORKFLOW.md  VIBECODER_PLAYGROUND_DESIGN_SYSTEM.md  VIBE_01_github_content.md  VIBE_02_playground.md  (+38 more)
server/: .env  .env.example  about_content_routes.py  about_content_service.py  admin_operations_routes.py  admin_page_editor_routes.py  admin_policy_routes.py  api_models.py  app_config.py  auth.py  auth_routes.py  curated_defs.py  curated_reasons.py  curated_routes.py  curated_runtime.py  curated_service.py  curated_settings.py  db.py  email_service.py  gemini_curator.py  github_collector.py  launchpad_routes.py  launchpad_utils.py  main.py  moderation_settings.py  public_api_routes.py  pyproject.toml  pyrightconfig.json  scheduler.py  shared_utils.py  showcase_clap_routes.py  stars_refresher.py  translation.py  translation_routes.py  xp_routes.py  xp_service.py
server/migrations/: e2_block_transform.py  e2_data_extraction.py  e2_migration_runner.py
server/tests/: test_admin_curated_collection_api.py  test_admin_page_editor_api.py  test_admin_policy_logs_api.py  test_admin_user_enforcement.py  test_curated_related_api.py  test_oauth_regression.py  test_translate_api.py
(+140 files in other folders)
